main.css
body {
    background: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/N13e7awhgiljgescq/videoblocks-black-empty-space-with-stars-dark-science-background-with-movement_rrrhaewqg_thumbnail-full01.png");
}

#header {
    color: #5444E8;
    text-align: center;
}

h1, h2 {
    color: white;
}

img {
    border-radius: 50%;
}

#astros {
    display: flex;
    flex-direction: column;
    width: 700px;
}

/* OLEG KONONENKO*/
#oleg {
    width: 800px;
    display: flex;
    flex-direction: row;
}
#olegPic {
    width: 300px;
}

#olegInfo {
    width: 500px;
}

/* DAVID ST-JACQUES*/
#david {
    width: 800px;
    display: flex;
    flex-direction: row;
}
#davidPic {
    width: 300px;
}

#davidInfo {
    width: 500px;
}

/* ANNE MCCLAIN */
#anne {
    width: 800px;
    display: flex;
    flex-direction: row;
}
#annePic {
    width: 300px;
}

#anneInfo {
    width: 500px;
}

